--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap");
 @import "tailwindcss";
 /* body {
   font-family: "Poppins", sans-serif;
@@ -40,7 +40,7 @@ html, body {
 
 /* .box:hover .flip-card-inner {
             transform: rotateY(-180deg);
-        } */
+        
 
 .box-login,
 .box-signup {
@@ -62,7 +62,7 @@ html, body {
   border-radius: 25px;
   box-sizing: border-box;
   backdrop-filter: blur(10px);
-  /* border: 1px solid white; */
+  /* border: 1px solid white; 
   position: absolute;
 }
 
@@ -152,7 +152,7 @@ label {
   border: 1px solid white;
   /* border-bottom-color:white ; */
   /* padding: 20px 10px; */
-  /* transition: 0.3s ease; */
+  /* transition: 0.3s ease; 
 }
 
 .box input:focus{
@@ -171,13 +171,13 @@ label {
 }
 
 .box-signup form a {
-  /* display: flex; */
+  /* display: flex; 
   text-align: right;
   text-decoration: none;
   color: white;
   padding-left: 155px;
   font-size: 1rem;
-  /* transition: 0.5s ease; */
+  /* transition: 0.5s ease; 
 }
 
 form a:active {
@@ -186,14 +186,14 @@ form a:active {
 
 .box-login .register-link {
   font-size: 1rem;
-  /* margin-bottom: rem; */
+  /* margin-bottom: rem; 
   padding-bottom: 15px;
   font-style: italic;
 }
 
 .box-signup .register-link {
   font-size: 1rem;
-  /* margin-bottom: 3rem; */
+  /* margin-bottom: 3rem;
   padding-bottom: 30px;
   font-style: italic;
 }
@@ -213,7 +213,7 @@ form a:active {
 }
 
 .email-login i {
-  /* content: "\eee1"; */
+  /* content: "\eee1";
   position: absolute;
   top: 11rem;
   right: 3.5rem;
@@ -273,4 +273,4 @@ form a:active {
     width: 80%;
   }
 }
-
+ */
